--- a/css/default.css
+++ b/css/default.css
@@ -3,10 +3,6 @@ html,body{
 	padding: 0;
 }
 
-.clearfix{
-	clear: both;
-}
-
 .entry{
 	border: 1px solid black;
 	padding: 5px;
@@ -19,4 +15,21 @@ html,body{
 .categoryContent{
 	padding:5px;
 	background-color: grey;
+}
+
+.text-middle{
+	vertical-align: middle;
+}
+
+.cat-subtitle{
+	margin-top: 5px;
+	font-size: 0.8em;
+}
+
+.panel-group{
+	background-color: #f5f5f5;
+}
+
+.modal-body{
+	padding: 0 20px 0 20px;
 }
