--- a/css/default.css
+++ b/css/default.css
@@ -1,6 +1,7 @@
-html,body{
-	margin: 0;
-	padding: 0;
+html, body {
+  font-family: 'Roboto', 'Helvetica', sans-serif !important;
+  margin: 0;
+  padding: 0;
 }
 
 .entry{
