--- a/content_scripts/inject.css
+++ b/content_scripts/inject.css
@@ -10,6 +10,10 @@
 	margin-top:10px;
 	max-width:150px;
 	overflow: hidden;
+}
 
+.highlight_username{
+	color: blue;
+	border: 3px dotted blue;
 }
 
