--- a/background/css/fab.css
+++ b/background/css/fab.css
@@ -6,6 +6,11 @@
     padding: 24px;
     overflow: hidden;   
     z-index:9999;
+    width:200px;
+}
+
+#fab_content{
+    float:right;
 }
 
 .water-drop {
@@ -68,8 +73,8 @@
 .button-floating {
     z-index: 40;
     cursor: pointer;
-    background-color: #5DB926;
-    color: white;
+    background-color: #69F0AE;
+    color: black;
     font-size: 42px;
     text-align: center;
     line-height: 60px;
@@ -111,6 +116,20 @@
     -webkit-animation-fill-mode: backwards;
     animation-fill-mode: backwards;
 }
+
+.next-to-button{
+    line-height:54px;
+    font-size:15px;
+    color:black;
+    position: absolute;
+    width: 100px;
+    right: 70px;
+    text-align: right;
+
+}
+
+
+
 .button-floating-clicked-out .button-sub {
     -webkit-animation-name: fadeOut;
     animation-name: fadeOut;
