--- a/background/css/mp.css
+++ b/background/css/mp.css
@@ -14,13 +14,26 @@ h2{
 }
 
 .btn-mp{
+	box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
 	border-radius: 2px;
 	border:none;
 	padding:10px 12px;
+	background-color: #69F0AE;
+	color:black;
+	font-weight: 400;
+}
+
+.btn-mp.light{
+	box-shadow: none;
+	background-color: transparent;
+}
+.btn-mp.light:hover{
+	background-color: #f9f9f9;
 }
 
 .btn-mp:hover{
 	border:none;
+	background-color:#4baf7e;
 }
 
 
@@ -57,7 +70,7 @@ h2{
 
 .panel-footer{
 	margin-right: 15px !important;
-    margin-left: 10px;
+	margin-left: 10px;
 }
 
 .entry{
@@ -70,6 +83,15 @@ h2{
 
 }
 
+.entry-row{
+	line-height: 40px;
+}
+
+.placeholder-img{
+	border-radius: 50%;
+	margin-right: 10px;
+}
+
 .cat-title{
 	font-size:1.2em;
 }
@@ -78,6 +100,47 @@ h2{
 	font-weight: 300;
 }
 
+#search{
+	outline: none;
+	border: none !important;
+	-webkit-box-shadow: none !important;
+	-moz-box-shadow: none !important;
+	box-shadow: none !important;
+	background-color: #4f5ebe;
+	line-height: 42px;
+	color:white;
+	height:45px;
+	width:18%;
+	transition: all 0.5s;
+	opacity: 0.5;
+	font-size: 20px;
+}
+#search:focus{
+	background-color: #4f5ebe;
+	opacity: 1;
+	width:50%;
+}
+#search:focus + #search-icon{
+	right: 51%;
+	opacity: 1;
+}
+
+#search::placeholder{
+	color:white;
+	font-size: 20px;
+}
+#search-icon{
+	transition: all 0.5s;
+	color:white;
+	top:10px;
+	right:83%;
+	opacity: 0.5;
+}
+
+.form-group.search i{
+	color: white;
+	font-size: 30px;
+}
 
 .entry-icons{
 	color: #8A8A8A;
@@ -93,6 +156,12 @@ h2{
 .categoryWrapper{
 	padding: 5px;
 
+}
+
+.material-icons.category_icons{
+	padding-top: 6px;
+	position: absolute;
+	font-size: 28px;
 }
 .categoryContent{
 	padding:5px;
