--- a/background/css/mp.css
+++ b/background/css/mp.css
@@ -42,11 +42,31 @@ h2{
 	border: none;
 }
 .panel-default > .panel-heading.panel-card{
-	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-	background-color: #303f9f;
+/*	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);*/
+	transition: all 0.5s cubic-bezier(.25,.8,.25,1);
+	/*background-color: #303f9f;*/
+	background-color: #7E808E;
 	color: white;
+}
 
+.panel-default > .panel-heading.panel-card:hover{
+	   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+	
+	}
+
+.panel-default > .panel-heading.panel-card.category-focused{
+/* background-color: #69f0ae; */
+	/*color:black;*/
+	opacity: 1;
+	background-color: #303f9f;
+	  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+	
+}
+
+.low-color{
+	/*opacity: 0.1;*/
+	background-color: #7E808E;
+	
 }
 .panel-default > .panel-card a{
 	color:white;
@@ -85,6 +105,7 @@ h2{
 
 .entry-row{
 	line-height: 40px;
+	margin-top: 20px;
 }
 
 .placeholder-img{
@@ -155,6 +176,9 @@ h2{
 }
 .categoryWrapper{
 	padding: 5px;
+}
+
+.category-element{
 
 }
 
