--- a/content_scripts/inject.css
+++ b/content_scripts/inject.css
@@ -17,20 +17,19 @@
 */
 .hintbox{
 	border: none;
-position: absolute;
-transition: all 0.5s cubic-bezier(.25,.8,.25,1);
-z-index: 9999;
-background-color: white;
-color: black;
-margin-top: 10px;
-width: 340px;
-min-height: 50px;
-max-width: 218px;
-overflow: hidden;
-box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-position: relative;
-float: right;
-margin-bottom: 11px;
+	transition: all 0.5s cubic-bezier(.25,.8,.25,1);
+	z-index: 9999;
+	background-color: white;
+	color: black;
+	margin-top: 10px;
+	width: 340px;
+	min-height: 50px;
+	max-width: 218px;
+	overflow: hidden;
+	box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+	position: relative;
+	float: right;
+	margin-bottom: 11px;
 }
 
 .hintbox_head.focused{
@@ -77,6 +76,20 @@ margin-bottom: 11px;
 .highlight_username{
 	color: blue;
 	border: 3px dotted blue;
+}
+
+.showPW{
+	background-color: rgba(0,0,0,0.1);
+	color: black;
+	border-radius: 50px 50px 50px 50px;
+	padding: 4px 10px;
+	position: relative;
+	left:30px;
+}
+
+.showPW:hover{
+	cursor: pointer;
+	background-color: rgba(0,0,0,0.3);
 }
 
 hr{
