--- a/background/css/mp.css
+++ b/background/css/mp.css
@@ -47,6 +47,7 @@ h2{
 	/*background-color: #303f9f;*/
 	background-color: #7E808E;
 	color: white;
+	cursor: pointer;
 }
 
 .panel-default > .panel-heading.panel-card:hover{
@@ -165,6 +166,9 @@ h2{
 	color: white;
 	font-size: 30px;
 }
+h2.row-header{
+	margin-bottom: 10px;
+}
 
 .entry-icons{
 	color: #8A8A8A;
@@ -177,8 +181,32 @@ h2{
 	width: 80%;
 	margin: 0 auto;
 }
+
+.showPW{
+	background-color: rgba(0,0,0,0.1);
+	color: black;
+	border-radius: 50px 50px 50px 50px;
+	padding: 4px 10px;
+	position: relative;
+	left:30px;
+}
+
+.showPW:hover{
+	cursor: pointer;
+	background-color: rgba(0,0,0,0.3);
+}
+
+
+.material-icons.hastext{
+	top: 7px;
+	position: relative;
+}
 .categoryWrapper{
 	padding: 5px;
+}
+
+#entryContainer, #uniqueEntryContainer{
+	padding: 15px;
 }
 
 .category-element{
@@ -209,5 +237,5 @@ h2{
 }
 
 .modal-body{
-	padding: 0 20px 0 20px;
+	padding: 20px 50px;
 }
