--- a/background/css/mp.css
+++ b/background/css/mp.css
@@ -42,7 +42,7 @@ h2{
 	border: none;
 }
 .panel-default > .panel-heading.panel-card{
-/*	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);*/
+	/*	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);*/
 	transition: all 0.5s cubic-bezier(.25,.8,.25,1);
 	/*background-color: #303f9f;*/
 	background-color: #7E808E;
@@ -51,16 +51,16 @@ h2{
 }
 
 .panel-default > .panel-heading.panel-card:hover{
-	   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+	box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 	
-	}
+}
 
 .panel-default > .panel-heading.panel-card.category-focused{
-/* background-color: #69f0ae; */
+	/* background-color: #69f0ae; */
 	/*color:black;*/
 	opacity: 1;
 	background-color: #303f9f;
-	  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+	box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 	
 }
 
@@ -112,8 +112,10 @@ h2{
 .placeholder-img{
 	border-radius: 50%;
 	margin-right: 10px;
-	width: 38px;
-	height: 38px;
+	width: 45px;
+	height: 45px;
+	background-color: white;
+	border: 0.5px solid #aeaeae;
 }
 
 .cat-title{
