--- a/background/css/mp.css
+++ b/background/css/mp.css
@@ -15,6 +15,10 @@ a, a:hover{
 	color: var(--primary-color);
 }
 
+.entry-actions{
+	display: none;
+	transition: all 0.5s cubic-bezier(.25,.8,.25,1);
+}
 
 h4{
 	font-size: 14px !important;
@@ -241,6 +245,7 @@ h2.row-header{
 	padding-top: 6px;
 	position: absolute;
 	font-size: 28px;
+	color: black;
 }
 .categoryContent{
 	padding:5px;
