--- a/background/css/mp.css
+++ b/background/css/mp.css
@@ -216,7 +216,8 @@ h2.row-header{
 	border-radius: 50px 50px 50px 50px;
 	padding: 4px 10px;
 	position: relative;
-	left:30px;
+	margin-left:30px;
+	margin-right: 30px;
 }
 
 .showPW:hover{
