--- a/background/css/mp.css
+++ b/background/css/mp.css
@@ -322,6 +322,11 @@ input[type="color"]:focus,
 	border-radius: 2px;
 }
 
-#modalYesNo{
-	
+#modalYesNo span{
+	float: left;
+	margin-left: 35px;
+	line-height: 35px;
+	font-weight: 400;
+	color: red;
+
 }
