--- a/popup/login.css
+++ b/popup/login.css
@@ -1,7 +1,12 @@
+:root {
+	--primary-color: #58568f; /* alternatives: #58568f; #a124ae; */
+	--highlight-color: #f0f069;
+	--dark-color: #353641;
+}
 /* login.css */
 
-html, body.blue{
-	background-color: #303f9f;
+html, body{
+	background-color: var(--primary-color);
 }
 
 .hidden{
@@ -13,7 +18,7 @@ body.login{
 	padding-top: 0;
 }
 .blue{
-	background-color: #303f9f;
+	background-color: var(--primary-color);
 	color: white;
 }
 
