--- a/popup/popup_default.css
+++ b/popup/popup_default.css
@@ -1,13 +1,85 @@
+:root {
+	--primary-color: #58568f; /* alternatives: #58568f; #a124ae; */
+	--highlight-color: #f0f069;
+	--dark-color: #353641;
+}
+
+html {overflow: -moz-scrollbars-none;}
+
 html, body {
-  width: 500px;
+	padding:0;
+	margin:0;
+	max-width: 250px;
+	min-height: 200px;
+	font-family: 'Roboto', 'Helvetica', sans-serif !important;
+	overflow: hidden;
 }
 
-.button {
-  margin: 3% auto;
-  padding: 4px;
-  text-align: center;
-  border: 1px black solid;
-  font-size: 1.5em;
-  cursor: pointer;
+.button-floating, .button-floating-shadow{
+	width: 46px !important;
+	height: 46px !important;
+	font-size:25px !important;
+	line-height: 46px !important;
 }
 
+#fab_wrapper{
+	position: absolute;
+	top: 50px !important;
+	right: 4% !important;
+}
+
+.head{
+	background-color: var(--primary-color);
+	padding: 10px 15px;
+	color: white;
+	height: 80px;
+}
+
+.footer{
+	padding: 10px 15px;
+}
+.content{
+	/*padding: 10px 15px;*/
+}
+
+.btn-mp{
+	box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
+	border-radius: 2px;
+	border:none;
+	padding:10px 12px;
+	background-color: var(--highlight-color);
+	color:black;
+	font-weight: 400;
+}
+
+.btn-mp.light{
+	box-shadow: none;
+	background-color: transparent;
+}
+.btn-mp.light:hover{
+	background-color: #f9f9f9;
+}
+
+.btn-mp:hover, .btn-mp:active, .btn-mp:focus, .btn-mp:target{
+	border:none;
+	filter: brightness(0.95);
+	background-color: var(--highlight-color);
+	color: black;
+}
+
+.mp-hidden {
+	height:0px !important;
+	-webkit-transition:height, 0.2s cubic-bezier(.25,.8,.25,1);
+	-moz-transition: height,  0.2s cubic-bezier(.25,.8,.25,1);
+	-ms-transition: height,  0.2s cubic-bezier(.25,.8,.25,1);
+	-o-transition: height,  0.2s cubic-bezier(.25,.8,.25,1);
+	transition: height,  0.2s cubic-bezier(.25,.8,.25,1);
+}
+.mp-hidden.open {
+	height:150px !important;
+	-webkit-transition:height,  0.2s cubic-bezier(.25,.8,.25,1);
+	-moz-transition: height,  0.2s cubic-bezier(.25,.8,.25,1);
+	-ms-transition: height,  0.2s cubic-bezier(.25,.8,.25,1);
+	-o-transition: height,  0.2s cubic-bezier(.25,.8,.25,1);
+	transition: height,  0.2s cubic-bezier(.25,.8,.25,1);
+}
