--- a/background/css/mp.css
+++ b/background/css/mp.css
@@ -39,6 +39,7 @@ h2{
 .btn-mp{
 	box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
 	border-radius: 2px;
+	transition: all 0.5s cubic-bezier(.25,.8,.25,1);
 	border:none;
 	padding:10px 12px;
 	background-color: var(--highlight-color);
@@ -58,6 +59,7 @@ h2{
 	border:none;
 	filter: brightness(0.95);
 	background-color: var(--highlight-color);
+	box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 	color: black;
 }
 
