--- a/background/css/mp.css
+++ b/background/css/mp.css
@@ -54,12 +54,15 @@ h2{
 .btn-mp.light:hover{
 	background-color: #f9f9f9;
 }
+.btn-mp-raise:hover{
+	box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+	
+}
 
 .btn-mp:hover, .btn-mp:active, .btn-mp:focus, .btn-mp:target{
 	border:none;
 	filter: brightness(0.95);
 	background-color: var(--highlight-color);
-	box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 	color: black;
 }
 
@@ -218,7 +221,6 @@ h2.row-header{
 	border-radius: 50px 50px 50px 50px;
 	padding: 4px 10px;
 	position: relative;
-	margin-left:30px;
 	margin-right: 30px;
 }
 
@@ -243,7 +245,7 @@ h2.row-header{
 .category-element{
 
 }
-#pw-hint span{
+#pw-hint span, .modal-hint span{
 	margin-left: 10px;
 }
 #enter-category-pwd{
