--- a/content_scripts/inject.css
+++ b/content_scripts/inject.css
@@ -54,7 +54,7 @@
 	max-width: 100%;
 	overflow: hidden;
 	/*box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);*/
-	position: relative;
+	position: absolute;
 	float: right;
 	margin-bottom: 11px;
 	text-align: left !important;
@@ -98,6 +98,7 @@
 .grid.middle{
 	width:60%; 
 	margin-left:10px;
+	display:inline-block;
 }
 .grid.right{
 	width:10%; 
@@ -154,7 +155,7 @@ hr{
 	-o-transition: height,  0.2s cubic-bezier(.25,.8,.25,1);
 	transition: height,  0.2s cubic-bezier(.25,.8,.25,1);
 }
-
+/*
 #ic_arrow{
 	transition: all 0.5s cubic-bezier(.25,.8,.25,1);
 }
@@ -164,4 +165,4 @@ hr{
 	-o-transform: rotate(180deg);
 	-webkit-transform: rotate(180deg);
 	transform: rotate(180deg);
-}
+}*/
