--- a/content_scripts/inject.css
+++ b/content_scripts/inject.css
@@ -8,7 +8,7 @@
 .mpinput{
 	background-size: 13px;
 	background-repeat: no-repeat;
-	border: 3px dotted #303F9F;
+	border: 2px solid #f0f069 !important;
 	color: black;
 	background-repeat: no-repeat;
 	background-position-x: 94%;
@@ -138,6 +138,10 @@ hr{
 	margin: 12px 0;
 }
 
+.highlightInput{
+	color:black;
+	border: 2px solid #f0f069 !important;
+}
 
 .mp-hidden {
 	height:0px !important;
@@ -149,6 +153,7 @@ hr{
 }
 .mp-hidden.open {
 	height:132px !important;
+	border: 1px solid black;
 	-webkit-transition:height,  0.2s cubic-bezier(.25,.8,.25,1);
 	-moz-transition: height,  0.2s cubic-bezier(.25,.8,.25,1);
 	-ms-transition: height,  0.2s cubic-bezier(.25,.8,.25,1);
