popup retrieves current url

--- a/popup/popup_default.css
+++ b/popup/popup_default.css
@@ -19,6 +19,10 @@ html, body {
 .popup{
 	cursor: pointer;
 }
+.link{
+	padding:5px;
+}
+
 
 .button-floating, .button-floating-shadow{
 	width: 46px !important;
