--- a/content_scripts/inject.css
+++ b/content_scripts/inject.css
@@ -143,6 +143,14 @@ hr{
 	border: 2px solid #f0f069 !important;
 }
 
+#inputMPW{
+	display: none;
+	height: 24px;
+	width: 98%;
+	margin: 0 auto;
+	border: 2px solid black !important;
+}
+
 .mp-hidden {
 	height:0px !important;
 	-webkit-transition:height, 0.2s cubic-bezier(.25,.8,.25,1);
