--- a/popup/popup_default.css
+++ b/popup/popup_default.css
@@ -20,7 +20,10 @@ a:hover{
 	cursor: pointer;
 	text-decoration: none;
 }
-
+#hint{
+	font-size:1.3em;
+	margin-bottom:15px;
+}
 .link{
 	cursor: pointer;
 	padding:5px;
@@ -32,7 +35,7 @@ a:hover{
 }
 .mid .forms{
 	display:none;
-	margin-top:50px;
+	margin-top:25px;
 	padding:0 15px;
 }
 .btn-wrapper{
@@ -66,15 +69,16 @@ a:hover{
 
 .grid.left{
 	float: left;
-	width:10%; 
+	width:20%; 
 }
 .grid.middle{
-	width:80%; 
-	margin-left:10px;
+	padding-top:15px;
+	width:70%; 
+	margin-left:0;
 	display:inline-block;
 }
 .grid.right{
-	width:10%; 
+	width:0; 
 	float:right;
 	margin-right: 20px
 }
@@ -82,13 +86,15 @@ a:hover{
 	margin-top: 5px;
 	border-radius: 50%;
 	margin-right: 10px;
-	width: 30px;
-	height: 30px;
+	width: 45px;
+	height: 45px;
 	background-color: white;
 	border: 0.5px solid #aeaeae;
 }
 
-
+#thisURL{
+	font-size:1.3em;
+}
 
 .footer{
 	padding: 10px 15px;
