--- a/background/css/mp.css
+++ b/background/css/mp.css
@@ -9,6 +9,7 @@ html, body {
 	margin: 0;
 	padding: 0;
 	padding-top: 70px;
+	background-color: #fafafa;
 }
 
 a, a:hover{
@@ -135,6 +136,9 @@ h2{
 
 .entry-row{
 	line-height: 40px;
+	display:none;
+}
+.entry-row:not(:first-of-type){
 	margin-top: 20px;
 }
 
@@ -238,10 +242,18 @@ h2.row-header{
 	padding: 5px;
 }
 
-#entryContainer, #uniqueEntryContainer{
-	padding: 15px;
+.card-wrapper{
+	padding:15px;
 }
 
+#entryContainer, #uniqueEntryContainer{
+	background-color: white;
+	padding: 15px;
+	box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
+}
+#entryContainer{
+	display:none;
+}
 .category-element{
 
 }
