quickstore feedback, color changes, hintbox getpw

--- a/background/css/fab.css
+++ b/background/css/fab.css
@@ -71,6 +71,7 @@
 
 
 .button-floating {
+    font-weight: 300;
     z-index: 40;
     cursor: pointer;
     background-color: var(--highlight-color);
