--- a/content_scripts/inject.css
+++ b/content_scripts/inject.css
@@ -129,6 +129,31 @@
 	background-color: rgba(0,0,0,0.3);
 }
 
+.btn-mp{
+	box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
+	border-radius: 2px;
+	transition: all 0.5s cubic-bezier(.25,.8,.25,1);
+	border:none;
+	padding:10px 12px;
+	background-color: var(--highlight-color);
+	color:black;
+	font-weight: 400;
+}
+.btn-mp:hover, .btn-mp:active, .btn-mp:focus, .btn-mp:target{
+	border:none;
+	filter: brightness(0.95);
+	background-color: var(--highlight-color);
+	color: black;
+}
+
+.btn-mp.light{
+	box-shadow: none;
+	background-color: transparent;
+}
+.btn-mp.light:hover{
+	background-color: #f9f9f9;
+}
+
 
 .material-icons.hastext{
 	top: 7px;
@@ -145,10 +170,14 @@ hr{
 
 #inputMPW{
 	display: none;
-	height: 24px;
-	width: 98%;
+	height: 25px;
+	width: 60%;
 	margin: 0 auto;
-	border: 2px solid black !important;
+	border: 1px solid black !important;
+}
+#btnInputMPW{
+	display:none;
+	margin-left:5px;
 }
 
 .mp-hidden {
