--- a/content_scripts/inject.css
+++ b/content_scripts/inject.css
@@ -2,7 +2,7 @@
 :root {
 	--primary-color: #58568f; /* alternatives: #58568f; #a124ae; */
 	--highlight-color: #f0f069;
-	--dark-color: #353641;
+	--dark-color: #212121;
 }
 
 .mpinput{
@@ -73,13 +73,15 @@
 }
 
 .hintbox_head{
-	background-color: var(--dark-color);
+	background-color: var(--highlight-color);
 	padding: 10px 5px;
-	color: white;
+	color: var(--dark-color);
 	font-size: 1.3em;
 	height:100%;
 	width:100%;	
-	line-height: 25px
+	line-height: 25px;
+	border: 1px solid black;
+	font-family: 'Roboto Slab';
 }
 
 .hintbox_head .material-icons{
@@ -190,7 +192,9 @@ hr{
 }
 .mp-hidden.open {
 	height:132px !important;
-	border: 1px solid black;
+	border-bottom: 1px solid black;
+	border-left: 1px solid black;
+	border-right: 1px solid black;
 	-webkit-transition:height,  0.2s cubic-bezier(.25,.8,.25,1);
 	-moz-transition: height,  0.2s cubic-bezier(.25,.8,.25,1);
 	-ms-transition: height,  0.2s cubic-bezier(.25,.8,.25,1);
