integrate PW Meter to popup

--- a/popup/popup.css
+++ b/popup/popup.css
@@ -16,6 +16,20 @@ html, body {
 	font-family: 'Roboto', 'Helvetica', sans-serif !important;
 	overflow: hidden;
 }
+.form-control[type="password"]{
+	border-bottom-left-radius: 0;
+	border-bottom-right-radius: 0;
+}
+
+.progress{
+	height: 10px !important;
+	border-radius:0 !important;
+	border-bottom-left-radius: 2px !important;
+	border-bottom-right-radius: 2px !important;
+}
+.password-verdict::before{
+	content: 'Password strength: ';
+}
 
 a:hover{
 	cursor: pointer;
