--- a/background/css/mp.css
+++ b/background/css/mp.css
@@ -11,10 +11,15 @@ html, body {
 	padding: 0;
 	/*padding-top: 70px;*/
 	background-color: #fafafa;
+	height: 100%;
 }
 
 a, a:hover{
 	color: var(--primary-color);
+}
+
+.mp-section{
+	display:none;
 }
 
 .form-control[type="password"]{
@@ -45,14 +50,16 @@ h2{
 	margin-bottom:40px;
 }
 h1, h2{
-	font-family: 'Roboto Mono';
+	font-family: 'Roboto';
 }
 h1 > small{
 	text-transform: uppercase;
 	font-size:0.5em;
 }
 h1{
-	font-size: 26px;
+	font-family: 'roboto slab';
+	font-size: 38px;
+	margin-left:15px;
 }
 
 .link{
@@ -62,8 +69,8 @@ h1{
 	color: black;
 	cursor: pointer;
 }
-#content{
-	padding-top:70px;
+.container{
+	padding-top:100px;
 }
 
 .btn-mp{
@@ -102,11 +109,12 @@ h1{
 }
 .panel-default > .panel-heading.panel-card{
 	/*	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);*/
+	box-shadow: 0 1px 1px rgba(0,0,0,0.1), 0 1px 2px rgba(0,0,0,0.1);
 	/*transition: all 0.5s cubic-bezier(.25,.8,.25,1);*/
 	/*background-color: #303f9f;*/
 	background-color: #FAFAFA;
 	color: #212121;
-	border: 1px solid black !important;
+	/*border: 1px solid black !important;*/
 	cursor: pointer;
 }
 
@@ -127,7 +135,7 @@ h1{
 .low-color{
 	/*opacity: 0.1;*/
 	background-color: #FAFAFA !important;
-	border: 1px solid black !important;
+	/*border: 1px solid black !important;*/
 
 	
 }
@@ -184,8 +192,17 @@ h1{
 }
 
 .cat-title{
-	font-size:1.2em;
-	font-family: 'roboto mono';
+	/*font-size:1.2em;*/
+	font-size: 18px;
+	font-family: 'roboto slab';
+
+}
+
+.section-hint{
+	font-size: 18px;
+	font-weight: 300;
+	padding: 15px;
+
 }
 
 .cat-info{
