--- a/background/css/sidebar.css
+++ b/background/css/sidebar.css
@@ -13,7 +13,7 @@ Martin Prinz 14.06.2017*/
 	height: 100%;
 	width: 300px;
 	max-width: 300px;
-	position: absolute;
+	position: fixed;
 	padding-top: 80px;
 	
 }
