--- a/content_scripts/inject.css
+++ b/content_scripts/inject.css
@@ -49,9 +49,8 @@
 	background-color: white;
 	color: black;
 	margin-top: 10px;
-	/*width: 340px;*/
+	width: 300px;
 	min-height: 50px;
-	max-width: 100%;
 	overflow: hidden;
 	/*box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);*/
 	position: absolute;
@@ -63,6 +62,34 @@
 .hintbox_head.focused{
 	
 }
+#hbpwrms .hintbox_content{
+	padding: 0 !important;
+	overflow-y: scroll !important;
+	overflow-x: hidden;
+	width: 100%;
+}
+
+#categoryList{
+	padding: 0 !important;
+	margin: 0 !important;
+	list-style-type: none;
+	height:100%;
+}
+#categoryList li{
+	padding: 5px 10px;
+}
+#categoryList li span{
+	margin-left: 20px;
+	color: var(--dark-color);
+	font-size: 1.3em;
+	line-height: 25px;
+}
+#categoryList li:hover{
+	background-color: #F3F3F3;
+	cursor: pointer;
+}
+
+
 
 .hintbox_head:hover{
 	cursor: pointer;
@@ -74,13 +101,15 @@
 
 .hintbox_head{
 	background-color: var(--highlight-color);
-	padding: 10px 5px;
+	padding: 10px 0px;
 	color: var(--dark-color);
 	font-size: 1.3em;
 	height:100%;
 	width:100%;	
 	line-height: 25px;
-	border: 1px solid black;
+	border-top: 1px solid black;
+	border-left: 1px solid black;
+	border-right: 1px solid black;
 	font-family: 'Roboto Slab';
 }
 
@@ -103,9 +132,9 @@
 	display:inline-block;
 }
 .grid.right{
-	width:10%; 
+	width:10%;
 	float:right;
-	margin-right: 20px
+	/*margin-right: 20px*/
 }
 .hintbox_content{
 	padding: 5px 10px;
