--- a/login/login.css
+++ b/login/login.css
@@ -46,10 +46,16 @@ h2{
 	opacity: 1;
 }
 .label.label-mp{
-	font-size:110%;
-	font-weight:400;
+	font-size: 12px;
+	font-weight: 400;
 	color: black;
+	line-height: 22px;
 	background-color: var(--highlight-color);
+	position: relative;
+	display: inline-block;
+	border-radius: 2px;
+	margin-top: 4px;
+
 }
 .radio.radio-mp{
 	margin-bottom: 25px;
@@ -64,7 +70,7 @@ h2{
 }
 
 .radio-content .name{
-	font-size: 1.5em;
+	font-size: 22px;
 	line-height: 1.5em;
 	margin-top: -5px;
 	
