--- a/popup/popup.css
+++ b/popup/popup.css
@@ -41,7 +41,11 @@ a:hover{
 }
 .link{
 	cursor: pointer;
-	padding:5px;
+	padding:10px 5px;
+	margin: 10px 0;
+}
+.link:hover{
+	text-decoration: none;
 }
 
 .mid{
@@ -114,7 +118,7 @@ a:hover{
 }
 
 .footer{
-	padding: 10px 20px;
+	padding: 15px 20px;
 	background-color: #F8F8F8;
 }
 .content{
@@ -155,7 +159,7 @@ a:hover{
 	transition: height,  0.4s cubic-bezier(.25,.8,.25,1);
 }
 .mp-hidden.open {
-	height:300px !important;
+	height:320px !important;
 	-webkit-transition:height,  0.4s cubic-bezier(.25,.8,.25,1);
 	-moz-transition: height,  0.4s cubic-bezier(.25,.8,.25,1);
 	-ms-transition: height,  0.4s cubic-bezier(.25,.8,.25,1);
