layout tweaks; fix category update logic

--- a/background/css/material/bootstrap-material-design.css
+++ b/background/css/material/bootstrap-material-design.css
@@ -405,7 +405,7 @@ body .container-fluid .jumbotron-danger {
 .input-group-btn .btn.btn-raised:not(.btn-link):active.btn-primary,
 .btn-group-raised .btn:not(.btn-link):active.btn-primary,
 .btn-group-raised .input-group-btn .btn:not(.btn-link):active.btn-primary {
-  background-color: #f0f069;
+  background-color: #ffeb3b;
   color: #212121;
 }
 .btn.btn-raised:not(.btn-link):hover.btn-success,
@@ -955,11 +955,11 @@ label.checkbox-inline input[type=checkbox]:focus:not(:checked) + .checkbox-mater
 .checkbox input[type=checkbox]:checked + .checkbox-material .check,
 label.checkbox-inline input[type=checkbox]:checked + .checkbox-material .check {
   color: #212121;
-  border-color: #f0f069;
+  border-color: #ffeb3b;
 }
 .checkbox input[type=checkbox]:checked + .checkbox-material .check:before,
 label.checkbox-inline input[type=checkbox]:checked + .checkbox-material .check:before {
-  color: #f0f069;
+  color: #ffeb3b;
   -webkit-box-shadow: 0 0 0 10px, 10px -10px 0 10px, 32px 0 0 20px, 0px 32px 0 20px, -5px 5px 0 10px, 20px -12px 0 11px;
           box-shadow: 0 0 0 10px, 10px -10px 0 10px, 32px 0 0 20px, 0px 32px 0 20px, -5px 5px 0 10px, 20px -12px 0 11px;
 }
