--- a/background/css/mp.less
+++ b/background/css/mp.less
@@ -2,7 +2,7 @@
 @dark-color: #212121;
 @neutral-color: #d5d5d5;
 @button-bg-color: #f9627d; 
-@hightlight-color: #f0f069;
+@hightlight-color: #ffeb3b;
 
 html, body {
 	font-family: 'Roboto', 'Helvetica', sans-serif !important;
