--- a/background/css/sidebar.css
+++ b/background/css/sidebar.css
@@ -3,7 +3,7 @@ Martin Prinz 14.06.2017*/
 
 :root {
 	--primary-color: #58568f; /* alternatives: #58568f; #a124ae; */
-	--highlight-color: #f0f069;
+	--highlight-color: #ffeb3b;
 	--dark-color: #212121;
 	--neutral-color: #d5d5d5;
 }
