assign unique PWM-ID and display in Manager; used for logfile name

--- a/background/css/mp.css
+++ b/background/css/mp.css
@@ -15,6 +15,13 @@ html, body {
 	height: 100%;
 }
 
+#webexID{
+	position: absolute;
+	bottom:10px;
+	right: 10px;
+	color: #212121;
+}
+
 a, a:hover{
 	color: var(--primary-color);
 }
